k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 648457118085.dkr.ecr.ap-south-1.amazonaws.com/3tier-backend:v1
          ports:
            - containerPort: 5000
      imagePullSecrets:
        - name: ecr-secret

---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000 
  type: ClusterIP
